syntax = "proto3";

package admin.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

import "permission/service/v1/permission.proto";


// Permission management service
service PermissionService {
  // Query permission list
  rpc List (pagination.PagingRequest) returns (permission.service.v1.ListPermissionResponse) {
    option (google.api.http) = {
      get: "/admin/v1/permissions"
    };
  }

  // Query permission details
  rpc Get (permission.service.v1.GetPermissionRequest) returns (permission.service.v1.Permission) {
    option (google.api.http) = {
      get: "/admin/v1/permissions/{id}"
    };
  }

  // Create permission
  rpc Create (permission.service.v1.CreatePermissionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/admin/v1/permissions"
      body: "*"
    };
  }

  // Update permission
  rpc Update (permission.service.v1.UpdatePermissionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/admin/v1/permissions/{id}"
      body: "*"
    };
  }

  // Delete permission
  rpc Delete (permission.service.v1.DeletePermissionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/admin/v1/permissions/{id}"
    };
  }

  // Sync permissions
  rpc SyncPermissions (google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/admin/v1/permissions/sync:perms"
      body: "*"
    };
  }
}
